--- a/.promptx/resource/project.registry.json
+++ b/.promptx/resource/project.registry.json
@@ -4,14 +4,63 @@
   "metadata": {
     "version": "2.0.0",
     "description": "project 级资源注册表",
-    "createdAt": "2025-08-02T13:19:53.737Z",
-    "updatedAt": "2025-08-02T13:19:53.737Z",
-    "resourceCount": 0
+    "createdAt": "2025-08-02T13:31:29.826Z",
+    "updatedAt": "2025-08-02T13:31:29.831Z",
+    "resourceCount": 3
   },
-  "resources": [],
+  "resources": [
+    {
+      "id": "frontend-workflow",
+      "source": "project",
+      "protocol": "execution",
+      "name": "Frontend Workflow 执行模式",
+      "description": "执行模式，定义具体的行为模式",
+      "reference": "@project://.promptx/resource/role/frontend-expert/execution/frontend-workflow.execution.md",
+      "metadata": {
+        "createdAt": "2025-08-02T13:31:29.830Z",
+        "updatedAt": "2025-08-02T13:31:29.830Z",
+        "scannedAt": "2025-08-02T13:31:29.830Z",
+        "path": "role/frontend-expert/execution/frontend-workflow.execution.md"
+      }
+    },
+    {
+      "id": "frontend-expert",
+      "source": "project",
+      "protocol": "role",
+      "name": "Frontend Expert 角色",
+      "description": "专业角色，提供特定领域的专业能力",
+      "reference": "@project://.promptx/resource/role/frontend-expert/frontend-expert.role.md",
+      "metadata": {
+        "createdAt": "2025-08-02T13:31:29.830Z",
+        "updatedAt": "2025-08-02T13:31:29.830Z",
+        "scannedAt": "2025-08-02T13:31:29.830Z",
+        "path": "role/frontend-expert/frontend-expert.role.md"
+      }
+    },
+    {
+      "id": "frontend-thinking",
+      "source": "project",
+      "protocol": "thought",
+      "name": "Frontend Thinking 思维模式",
+      "description": "思维模式，指导AI的思考方式",
+      "reference": "@project://.promptx/resource/role/frontend-expert/thought/frontend-thinking.thought.md",
+      "metadata": {
+        "createdAt": "2025-08-02T13:31:29.831Z",
+        "updatedAt": "2025-08-02T13:31:29.831Z",
+        "scannedAt": "2025-08-02T13:31:29.831Z",
+        "path": "role/frontend-expert/thought/frontend-thinking.thought.md"
+      }
+    }
+  ],
   "stats": {
-    "totalResources": 0,
-    "byProtocol": {},
-    "bySource": {}
+    "totalResources": 3,
+    "byProtocol": {
+      "execution": 1,
+      "role": 1,
+      "thought": 1
+    },
+    "bySource": {
+      "project": 3
+    }
   }
 }
